feat: connect Gum users and profiles
