# libs/api/core/data-access/src/lib/api-core.service.ts
@@ -81,7 +81,7 @@ export class ApiCoreService implements OnApplicationBootstrap {
         this.data.user
           .findUnique({
             where: { id: userId },
-            include: { profile: true, profiles: true, identities: true, gumUser: true },
+            include: { profile: true, profiles: true, identities: true, gumUser: { include: { gumUser: true } } },
           })
           .then((user: CoreDbUser) => (user ? convertCoreDbUser(user) : undefined)),
       10,
